--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.1",
   "description": "js-benchmark for Backbone and React",
   "scripts": {
-    "bundle": "set NODE_ENV=production && webpack --progress --config ./webpack/webpack.ts.babel.prod.js"
+    "bundle": "webpack && cp Backbone/index.html dist/index.html"
   },
   "dependencies": {
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "backbone": "^1.3.3",
+    "jquery": "^3.1.1",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "@types/react": "^0.14.46",
@@ -25,7 +28,8 @@
     "ts-loader": "^2.0.0",
     "typescript": "^2.1.5",
     "typings": "^2.0.0",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "html-webpack-plugin":"^2.28.0"
   },
   "repository": {
     "type": "git",
