--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "react-dom": "^15.3.2",
     "backbone": "^1.3.3",
     "jquery": "^3.1.1",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "moment":"^2.17.1",
+    "handlebars":"^4.0.6"
   },
   "devDependencies": {
     "@types/react": "^0.14.46",
     "@types/react-dom": "^0.14.18",
+    "@types/backbone": "^1.3.3",
+    "@types/jquery": "^2.0.40",
+    "@types/underscore": "^1.7.36",
+    "@types/handlebars": "^4.0.6",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
