--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "description": "js-benchmark for Backbone and React",
   "scripts": {
-    "watch":"webpack --watch",
-    "prebundle":"npm install",
-    "bundle": "webpack-dev-server"
+    "watch": "set NODE_ENV=development && webpack-dev-server --open --config ./webpack/webpack.config.dev.js",
+    "prebundle": "npm install",
+    "bundle": "set NODE_ENV=production && webpack --progress --config ./webpack/webpack.config.prod.js"
   },
   "dependencies": {
     "react": "^15.3.2",
@@ -13,32 +13,23 @@
     "backbone": "^1.3.3",
     "jquery": "^3.1.1",
     "underscore": "^1.8.3",
-    "moment":"^2.17.1",
-    "handlebars":"^4.0.6"
+    "moment": "^2.17.1",
+    "handlebars": "^4.0.6"
   },
   "devDependencies": {
+    "@types/backbone": "^1.3.3",
+    "@types/handlebars": "^4.0.6",
+    "@types/jquery": "^2.0.40",
     "@types/react": "^0.14.46",
     "@types/react-dom": "^0.14.18",
-    "@types/backbone": "^1.3.3",
-    "@types/jquery": "^2.0.40",
     "@types/underscore": "^1.7.36",
-    "@types/handlebars": "^4.0.6",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-es2016": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "awesome-typescript-loader": "^3.0.4-rc.2",
+    "copy-webpack-plugin": "^4.0.1",
     "path": "^0.12.7",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
-    "ts-loader": "^2.0.0",
     "typescript": "^2.1.5",
     "typings": "^2.0.0",
     "webpack": "^2.2.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "webpack-dev-server":"^2.3.0"
+    "webpack-dev-server": "^2.3.0"
   },
   "repository": {
     "type": "git",
