Inproved the way to show the results in the general application. Added new test to compare asynchronous updating. Improved the way to get the results. Improved the tsconfig.json to avoid node_modules in the compilation. Added identifier to the data and added new data file.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,10 @@
       "react-dom",
       "underscore"
     ]
-  }
+  },
+  "filesGlob" : [
+    "**/*.ts",
+    "**/*.tsx",
+    "!node_modules/**"
+  ]
 }
