--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "watch": "set NODE_ENV=development && webpack-dev-server --open --config ./webpack/webpack.config.dev.js",
     "prebundle": "npm install",
-    "bundle": "set NODE_ENV=production && webpack --progress --config ./webpack/webpack.config.prod.js"
+    "bundle": "set NODE_ENV=production && webpack --progress --config ./webpack/webpack.config.prod.js",
+    "predist":"npm run bundle",
+    "dist": "http-server ./dist -p 3000 -a 0.0.0.0"
   },
   "dependencies": {
     "react": "^15.3.2",
@@ -29,7 +31,8 @@
     "typescript": "^2.1.5",
     "typings": "^2.0.0",
     "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.3.0"
+    "webpack-dev-server": "^2.3.0",
+    "http-server":"^0.9.0"
   },
   "repository": {
     "type": "git",
