Added some documentation and finalized las test wih specific rendering.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
        - "3000:3000"
      volumes:
        - C:\Users\josej\Documents\GitHub\js-benchmark:/src
-     entrypoint: ["npm","run","watch"]
+     entrypoint: ["npm","run","dist"]
