--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/backbone": "^1.3.3",
     "@types/handlebars": "^4.0.6",
     "@types/jquery": "^2.0.40",
+    "@types/node": "^7.0.4",
     "@types/react": "^0.14.46",
     "@types/react-dom": "^0.14.18",
     "@types/underscore": "^1.7.36",
