--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "awesome-typescript-loader": "^3.0.4-rc.2",
     "copy-webpack-plugin": "^4.0.1",
     "path": "^0.12.7",
+    "css-loader": "^0.26.2",
+    "style-loader": "^0.13.2",
     "typescript": "^2.1.5",
     "typings": "^2.0.0",
     "webpack": "^2.2.0",
