--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "backbone": "^1.3.3",
-    "jquery": "^3.1.1",
+    "jquery": "2.1.4",
     "underscore": "^1.8.3",
     "moment": "^2.17.1",
     "handlebars": "^4.0.6"
